completed weather requests and formatting

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 			<div class="bg-dark col-md rounded m-1 p-2">
 				<!-- Selected City -->
 				<div id="responseTarget" class="p-4 border border-info rounded-lg">
-					<h1>City/date H1</h1>
-					<p>Temp p</p>
-					<p>Humidity p</p>
-					<p>Wind Speed p</p>
-					<span>UV Index: </span><span class="badge-danger rounded p-2">UV span</span>
+					<h1 id="currentCity">No City Selected</h1>
+					<p id="currentTemp">Temperature: </p>
+					<p id="currentHumidity">Humidity: </p>
+					<p id="currentWindspeed">Wind Speed:</p>
+					<span>UV Index: </span><span id="currentUV" class="rounded p-2"></span>
 				</div>
 				<!-- 5 Day Forecast -->
 				<div class="container">
