--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="container-fluid mt-2">
 		<div class="row">
 			<!-- Left Side -->
-			<div class="bg-dark col-md-4 m-1 rounded">
+			<div class="bg-dark col-sm-3 m-1 rounded">
 				<!-- Search -->
 				<h4 class="mt-2 mb-2">Search for a City:</h4>
 				<div class="form-inline">
