added weather icon to current city

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<div class="bg-dark col-md rounded m-1 p-2">
 				<!-- Selected City -->
 				<div id="responseTarget" class="p-4 border-bottom border-info">
-					<h2 id="currentCity">No City Selected</h1>
+					<h2 id="currentCity">No City Selected<span><img src="http://openweathermap.org/img/wn/04d.png"></span></h1>
 					<p id="currentTemp">Temperature: </p>
 					<p id="currentHumidity">Humidity: </p>
 					<p id="currentWindspeed">Wind Speed:</p>
